<resources>
    <string name="app_name">TMS_An_15_Homework_Lesson_25</string>
    <string name="title">Title</string>
    <string name="massage">Message</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
    <string name="all_notes">All Notes</string>
    <string name="home">home</string>
    <string name="ic_massage">massage</string>
    <string name="user_not_found">User not found.</string>
    <string name="user_created">User created</string>
    <string name="spiice">Spiice</string>
    <string name="text_button">Discover the platform</string>
    <string name="log_in_question">You have an account?</string>
    <string name="log_in">Log-in</string>
    <string name="sing_up">Sign-up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="onboarding_1">Make money while working on awesome projects</string>
    <string name="onboarding_2">Copy Work hard and level up!</string>
    <string name="onboarding_3">Enjoy your progess!</string>
    <string name="empty_first_name">Empty first name</string>
    <string name="empty_last_name">Empty last name</string>
    <string name="empty_email">Empty email</string>
    <string name="empty_password">Empty password</string>
    <string name="sing_up_question">You don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_button">Skip</string>
</resources>